update Formatter and Stylish